--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <body>
-	<nav class="navbar navbar-default" role="navigation">
+	<nav class="navbar navbar-default navbar-static-top" role="navigation">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-WDM-navbar-collapse-1">
@@ -19,7 +19,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-			<a class="navbar-brand" href="#">LUBot</a>
+			<a class="navbar-brand logo" href="#"><img class="logo" src="img/Logo_Complet_2.png"></a>
 		</div>
 
 		<div class="collapse navbar-collapse navbar-right" id="bs-WDM-navbar-collapse-1">
