--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <body>
-	<nav class="navbar navbar-default navbar-static-top" role="navigation">
+	<nav class="navbar navbar-default navbar-static-top no-margin no-padding" role="navigation">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-WDM-navbar-collapse-1">
@@ -41,13 +41,15 @@
 </nav>
 
 
-	<div class="container-fluid jumbotron">
-	    <h1>Hello, world!</h1>
-  		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tellus at urna condimentum mattis pellentesque id nibh tortor id. Nisl tincidunt eget nullam non nisi est sit amet. Urna cursus eget nunc scelerisque viverra mauris in aliquam sem. Pretium lectus quam id leo in vitae. Suspendisse interdum consectetur libero id. At elementum eu facilisis sed odio morbi quis. Fermentum posuere urna nec tincidunt praesent semper. Tincidunt dui ut ornare lectus sit amet est placerat. Accumsan sit amet nulla facilisi morbi. Quisque id diam vel quam elementum pulvinar etiam non. Aliquet sagittis id consectetur purus. Posuere lorem ipsum dolor sit amet consectetur adipiscing. Cursus risus at ultrices mi. Senectus et netus et malesuada fames ac. Mi proin sed libero enim sed faucibus. Vel facilisis volutpat est velit egestas dui id. Ut etiam sit amet nisl purus in mollis nunc. A cras semper auctor neque vitae. Nunc congue nisi </p>
-  		<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+	<div class="page-header no-margin no-padding">
+	
+	   <img  class="img-responsive" src="img/header.png">
 	</div>
-	<div class="container-fluid yellow">
-		<p></p>
+
+	<div class="no-margin no-padding yellow">
+	</div>
+
+	<div class="no-margin no-padding green">
 	</div>
 
 
