--- a/index.html
+++ b/index.html
@@ -40,18 +40,36 @@
 	</div>
 </nav>
 
-
+<!-- HEADER -->
 	<div class="page-header no-margin no-padding">
-	
 	   <img  class="img-responsive" src="img/header.png">
 	</div>
 
-	<div class="no-margin no-padding yellow">
+<!-- FIRST PART -->
+	<div class="container-fluid yellow no-margin no-padding ">
+		<div class="col-md-4">
+			<img  class="img-responsive icons1 container" src="img/group.png">
+			<h2 class="centertext">3</h2>
+			<h3 class="centertext">Milliards d'utilisateurs</h3>
+		</div>
+		<div class="col-md-4">
+			<img  class="img-responsive icons1 container" src="img/mail.png">
+			<h2 class="centertext">10</h2>
+			<h3 class="centertext">Milliards de messages par jour</h3>
+		</div>
+		<div class="col-md-4">
+			<img  class="img-responsive icons1 container" src="img/website.png">
+			<h2 class="centertext">23</h2>
+			<h3 class="centertext">Consultations par jour</h3>
+		</div>
 	</div>
 
-	<div class="no-margin no-padding green">
-	</div>
+<!-- SECOND PART -->
+	<div class="container-fluid green no-margin no-padding ">
+			<h1 class="centertext" style="color: white"> Pourquoi choisir LUBot ? </h1>
 
+			<h1 class="centertext" style="color: white"> ____________</h1>
+	</div>
 
 <script src="js/jquery.js"></script> 
 <script src="js/bootstrap.min.js"></script>
