--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
 
 <!-- HEADER -->
 	<div class="page-header no-margin no-padding">
-	   <img  class="img-responsive" src="img/header.png">
+	    <div class="parallax">
+	   </div>
 	</div>
-
+	
 <!-- FIRST PART -->
 	<div class="container-fluid yellow no-margin no-padding ">
 		<div class="col-md-4">
