--- a/index.html
+++ b/index.html
@@ -42,34 +42,56 @@
 
 <!-- HEADER -->
 	<div class="page-header no-margin no-padding">
-	    <div class="parallax">
+	    <div class="parallax img-responsive">
 	   </div>
 	</div>
-	
+
 <!-- FIRST PART -->
-	<div class="container-fluid yellow no-margin no-padding ">
+	<div class="container-fluid yellow">
+		<div class="spacing">
 		<div class="col-md-4">
-			<img  class="img-responsive icons1 container" src="img/group.png">
+			<img class="img-responsive icons1 container" src="img/group.png">
 			<h2 class="centertext">3</h2>
 			<h3 class="centertext">Milliards d'utilisateurs</h3>
 		</div>
 		<div class="col-md-4">
-			<img  class="img-responsive icons1 container" src="img/mail.png">
+			<img class="img-responsive icons1 container" src="img/mail.png">
 			<h2 class="centertext">10</h2>
 			<h3 class="centertext">Milliards de messages par jour</h3>
 		</div>
 		<div class="col-md-4">
-			<img  class="img-responsive icons1 container" src="img/website.png">
+			<img class="img-responsive icons1 container" src="img/website.png">
 			<h2 class="centertext">23</h2>
 			<h3 class="centertext">Consultations par jour</h3>
+		</div>
 		</div>
 	</div>
 
 <!-- SECOND PART -->
-	<div class="container-fluid green no-margin no-padding ">
-			<h1 class="centertext" style="color: white"> Pourquoi choisir LUBot ? </h1>
-
+	<div class="container-fluid green">
+			<h1 class="centertext spacing" style="color: white"> Pourquoi choisir LUBot ? </h1>
 			<h1 class="centertext" style="color: white"> ____________</h1>
+
+		<div class="col-md-4">
+			<img class="img-responsive icons2 container" src="img/FirstPhone.png">
+			<h2 class="centertext" style="color: white">Personnaliser</h2>
+			<h3 class="centertext" style="color: white" >____________</h3>
+		</div>
+
+		<div class="col-md-4">
+			<img class="img-responsive icons2 container" src="img/SecondPhone.png">
+			<h2 class="centertext" style="color: white">Transformer</h2>
+			<h3 class="centertext" style="color: white" >____________</h3>
+		</div>
+
+		<div class="col-md-4">
+			<img class="img-responsive icons2 container" src="img/ThirdPhone.png">
+			<h2 class="centertext" style="color: white">Pérenniser</h2>
+			<h3 class="centertext" style="color: white" >____________</h3>
+		</div>
+
+
+		</div>
 	</div>
 
 <script src="js/jquery.js"></script> 
