second part advanced

--- a/index.html
+++ b/index.html
@@ -69,30 +69,56 @@
 
 <!-- SECOND PART -->
 	<div class="container-fluid green">
-			<h1 class="centertext spacing" style="color: white"> Pourquoi choisir LUBot ? </h1>
-			<h1 class="centertext" style="color: white"> ____________</h1>
+			<h1 class="centertext spacing whitetext" > Pourquoi choisir LUBot ? </h1>
+			<h2 class="centertext whitetext" > ____________</h2>
 
 		<div class="col-md-4">
 			<img class="img-responsive icons2 container" src="img/FirstPhone.png">
-			<h2 class="centertext" style="color: white">Personnaliser</h2>
-			<h3 class="centertext" style="color: white" >____________</h3>
+			<h2 class="centertext whitetext" >Personnaliser</h2>
+			<h3 class="centertext whitetext" >____________</h3>
+			<p class="blueframe centertext spacing whitetext" style="line-height:2;">À l'aide des derniers algorithmes en matière de compréhension du  langage naturel, LUBot garantit une expérience client fluide et intuitive </p>
 		</div>
 
 		<div class="col-md-4">
 			<img class="img-responsive icons2 container" src="img/SecondPhone.png">
-			<h2 class="centertext" style="color: white">Transformer</h2>
-			<h3 class="centertext" style="color: white" >____________</h3>
+			<h2 class="centertext whitetext" >Transformer</h2>
+			<h3 class="centertext whitetext" >____________</h3>			
+			<p class="blueframe centertext spacing whitetext" style="line-height:2;"> Parce que aujourd'hui l'usage des applications de messageries instantanés à largement dépassé celle des réseaux sociaux, LUBot optimise votre communication.</p>
 		</div>
 
 		<div class="col-md-4">
 			<img class="img-responsive icons2 container" src="img/ThirdPhone.png">
-			<h2 class="centertext" style="color: white">Pérenniser</h2>
-			<h3 class="centertext" style="color: white" >____________</h3>
-		</div>
-
-
+			<h2 class="centertext whitetext" ">Pérenniser</h2>
+			<h3 class="centertext whitetext" " >____________</h3>
+			<p class="blueframe centertext spacing whitetext" style="line-height:2;"> Avec des algorithmes de machine learning automatisé, votre LUBot ne cesse d'apprendre et d'être toujours plus intelligent afin de mieux vous servir.</p>
 		</div>
 	</div>
+
+<!-- THIRD PART --> 
+	<div class="container-fluid blue">
+		<h1 class="centertext spacing whitetext" > Pourquoi choisir LUBot ? </h1>
+		<h2 class="centertext whitetext" > ____________</h2>
+		<img id="LogoRt" class="img-responsive" src="img/Perdez.png"> 
+
+		<div class="col-md-4">
+			<h2 class="centertext whitetext" >Polyvalent</h2>
+			<h3 class="centertext whitetext" >____________</h3>
+			<p class="yellowframe centertext spacing bluetext" style="line-height:2;">Opinions, suggestions, requêtes, LUBot s'adapte précisément à vos besoins et à ceux de vos clients pour garantir une expérience optimale.</p>
+		</div>
+
+		<div class="col-md-4">
+			<h2 class="centertext whitetext" >Sécurisé</h2>
+			<h3 class="centertext whitetext" >____________</h3>			
+			<p class="yellowframe centertext spacing bluetext" style="line-height:2;">En plus des protocoles de communication hautement sécurisés,LUBot est conforme au RGPD. L'architecture du système offre une confidentialité et une transparence permanente.</p>
+		</div>
+
+		<div class="col-md-4">
+			<h2 class="centertext whitetext" ">Multi-Support</h2>
+			<h3 class="centertext whitetext" " >____________</h3>
+			<p class="yellowframe centertext spacing bluetext" style="line-height:2;"> Messenger, Slack, Wordpress et autre CRM LUBot et son API vous accompagnent partout. Nous vous offrons la possibilité d'affirmer votre personnalités en réalisant vos intégrations</p>
+		</div>
+	</div>
+
 
 <script src="js/jquery.js"></script> 
 <script src="js/bootstrap.min.js"></script>
