some style fix on frames

--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
 			<h3 class="centertext whitetext" " >____________</h3>
 			<p class="yellowframe centertext spacing bluetext" style="line-height:2;"> Messenger, Slack, Wordpress et autre CRM LUBot et son API vous accompagnent partout. Nous vous offrons la possibilité d'affirmer votre personnalités en réalisant vos intégrations</p>
 		</div>
+
+		<h1 class="centertext spacing whitetext" > Prochainement </h1>
+		<h2 class="centertext whitetext " > ____________</h2>
 	</div>
 
 
