--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <body>
-	<nav class="navbar navbar-default navbar-static-top no-margin no-padding" role="navigation">
+	<nav class="navbar navbar-default navbar-fixed-top no-margin no-padding" role="navigation">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-WDM-navbar-collapse-1">
@@ -117,10 +117,44 @@
 			<h3 class="centertext whitetext" " >____________</h3>
 			<p class="yellowframe centertext spacing bluetext" style="line-height:2;"> Messenger, Slack, Wordpress et autre CRM LUBot et son API vous accompagnent partout. Nous vous offrons la possibilité d'affirmer votre personnalités en réalisant vos intégrations</p>
 		</div>
+		<div style="padding-bottom: 100px">
+			<h1 class="centertext spacing whitetext" > Prochainement </h1>
+			<h2 class="centertext whitetext " > ____________</h2>
+				<div class="col-md-6">
+					<h2 class="centertext whitetext" ">Traitement de la voix</h2>
+				</div>
 
-		<h1 class="centertext spacing whitetext" > Prochainement </h1>
-		<h2 class="centertext whitetext " > ____________</h2>
+				<div class="col-md-6">
+					<h2 class="centertext whitetext" ">Payement en ligne</h2>
+				</div>
+		</div>
 	</div>
+
+
+
+
+
+<!--FOOTER --> 
+<footer class="site-footer">
+	<div class="container">
+		<div class="row">
+		</div>
+		<div class="bottom-footer">
+			<div class="col-md-5"> Copyright LUBot 2018.</div>
+			<div class="col-md-7">
+				<ul class="footer-nav">
+					<li><a href="#">Facebook</a></li>
+					<li><a href="#">Twitter</a></li>
+					<li><a href="#">LinkedIN</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</footer>
+					
+
+
+
 
 
 <script src="js/jquery.js"></script> 
