--- a/index.html
+++ b/index.html
@@ -131,6 +131,23 @@
 	</div>
 
 
+<!-- FOURTH PART -->
+<div class="container-fluid green">
+	<div class="container bluelongframe spacing"> 
+		<h1 class="whitetext">Simplifier vos réservations </h1>
+		<p class="whitetext">Vous ne réussissez pas a trouver de solution pour gérer vos réservations précisément et comme vous le désirez !
+		Vous avez finalement trouvé LUBot, le chatbot interactif, polyvalent et adaptatif.</p>
+	</div>
+	<div class="container bluelongframe spacing"> 
+		<h1 class="whitetext">Gérer votre emploi du temps </h1>
+		<p class="whitetext">Trouver un créneau qui convient, envoyer des invitations, gérer les changements et imprévus... Des tâches à faible valeur ajoutée qui peuvent s'avérer très chronophage. Avec sa compréhension du langage naturel LUBot est l'assistant virtuelle qui optimise votre agenda. Récupérez ce temps perdu avec l'intelligence artificielle.</p>
+	</div>
+	<div class="container bluelongframe spacing"> 
+		<h1 class="whitetext">Digitaliser votre relation client</h1>
+		<p class="whitetext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+	</div>
+
+</div>
 
 
 
