--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 	<!-- css --> 
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<style> @import url('https://fonts.googleapis.com/css?family=Roboto'); </style>
 </head>
 
 
 
 
-<body>
+<body style="font-family: 'Roboto', sans-serif;">
 	<nav class="navbar navbar-default navbar-fixed-top no-margin no-padding" role="navigation">
 		<div class="container-fluid">
 			<div class="navbar-header">
@@ -154,6 +155,34 @@
 
 </div>
 
+<!-- FIFTH PART-->
+
+<div class="container-fluid yellow">
+	<div class="container spacing">
+		<div class="col-md-5 bluelongframe">
+			<img class="img-responsive icons4" src="img/entreprise.png"> 
+			<h1 class="whitetext centertext">LUBot Entreprise</h1>
+			<p class="whitetext centertext">Fidélisez, améliorez votre service et ne perdez plus jamais le contact avec vos clients. Accessible 24h 7j/7 LUBot renforce votre relation avec les consommateurs.</p>
+		</div>
+		<div class="col-md-1"></div>
+		<div class="col-md-5 bluelongframe">
+			<img class="img-responsive icons4" src="img/programming.png"> 
+			<h1 class="whitetext centertext">LUBot Développeurs</h1>
+			<p class="whitetext centertext">Intégrez dans vos application l'intelligence artificielle enrichis directement de vos données et expériences clients avec notre API et nos kits d'outils d'interface utilisateur.</p>
+		</div>
+	</div>
+
+<!-- WEIRD STUFF TO ADD HERE --> 
+</div>
+
+
+
+<!-- SIXTH PART --> 
+<div class="container-fluid blue">
+		<h1 class="centertext spacing whitetext" > Et si on se rencontrait pour de vrai ? </h1>
+		<h2 class="centertext whitetext" > ____________</h2>
+		<img id="LogoRt" class="img-responsive" src="img/Vousdoutez.png"> 
+</div>
 
 
 <!--FOOTER --> 
@@ -165,8 +194,8 @@
 			<div class="col-md-5"> Copyright LUBot 2018.</div>
 			<div class="col-md-7">
 				<ul class="footer-nav">
-					<li><a href="#">Facebook</a></li>
-					<li><a href="#">Twitter</a></li>
+					<li><a href="https://www.facebook.com/LUBotOfficial/">Facebook</a></li>
+					<li><a href="https://twitter.com/LubotOfficial">Twitter</a></li>
 					<li><a href="#">LinkedIN</a></li>
 				</ul>
 			</div>
@@ -176,11 +205,9 @@
 					
 
 
-
-
-
 <script src="js/jquery.js"></script> 
 <script src="js/bootstrap.min.js"></script>
+
 
 </body>
 </html>
