--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
 		</div>
 		<div class="bottom-footer">
 			<div class="col-md-5"> Copyright LUBot 2018.</div>
-			<div class="col-md-7">
+			<div class="col-md-2"><a href="#">Mentions légales</a></div>
+			<div class="col-md-5">
 				<ul class="footer-nav">
 					<li><a href="https://www.facebook.com/LUBotOfficial/">Facebook</a></li>
 					<li><a href="https://twitter.com/LubotOfficial">Twitter</a></li>
