fixed header with button

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 
 
-
-
 <body style="font-family: 'Roboto', sans-serif;">
+
+
+<!-- NAVBAR --> 
 	<nav class="navbar navbar-default navbar-fixed-top no-margin no-padding" role="navigation">
 		<div class="container-fluid">
 			<div class="navbar-header">
@@ -41,11 +42,18 @@
 	</div>
 </nav>
 
+
 <!-- HEADER -->
-	<div class="page-header no-margin no-padding">
-	    <div class="parallax img-responsive">
-	   </div>
+	<div class="jumbotron centertext no-margin ">
+		<div class="container">
+			<div class="page-header ">
+				<h1>LUBOT</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+			</div>
+	    	<button type="button" class="btn btn-outline-primary btn-lg">DEMO</button>
+		</div>
 	</div>
+
 
 <!-- FIRST PART -->
 	<div class="container-fluid yellow">
