--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>LUBot</title>
-	<!-- css --> 
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<style> @import url('https://fonts.googleapis.com/css?family=Roboto'); </style>
-</head>
 
-
-<body style="font-family: 'Roboto', sans-serif;">
+<!-- CSS & FONTS IMPORT--> 
+	<head>
+		<title>LUBot</title>
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<style> @import url('https://fonts.googleapis.com/css?family=Roboto'); </style>
+	</head>
+	<body style="font-family: 'Roboto', sans-serif;">
 
 
 <!-- NAVBAR --> 
-	<nav class="navbar navbar-default navbar-fixed-top no-margin no-padding" role="navigation">
+	<nav id="nav" class="navbar navbar-default navbar-fixed-top no-margin no-padding" role="navigation">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-WDM-navbar-collapse-1">
@@ -27,7 +26,7 @@
 		<div class="collapse navbar-collapse navbar-right" id="bs-WDM-navbar-collapse-1">
 			<ul class="nav navbar-nav">
 				<li><a href="index.html">Accueil</a></li>
-				<li><a href="index.html">Nos solutions</a></li>
+				<li><a href="#solutions">Nos solutions</a></li>
 				 <li class="dropdown">
 			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Développeurs<span class="caret"></span></a>
 				          <ul class="dropdown-menu">
@@ -40,8 +39,7 @@
 			</ul>
 		</div>
 	</div>
-</nav>
-
+	</nav>
 
 <!-- HEADER -->
 	<div class="jumbotron centertext no-margin ">
@@ -53,7 +51,6 @@
 	    	<button type="button" class="btn btn-outline-primary btn-lg">DEMO</button>
 		</div>
 	</div>
-
 
 <!-- FIRST PART -->
 	<div class="container-fluid yellow">
@@ -104,6 +101,7 @@
 	</div>
 
 <!-- THIRD PART --> 
+ 	<div id="solutions" class="blue" style="padding-top: 20px"></div>
 	<div class="container-fluid blue">
 		<h1 class="centertext spacing whitetext" > Pourquoi choisir LUBot ? </h1>
 		<h2 class="centertext whitetext" > ____________</h2>
@@ -136,87 +134,86 @@
 				<div class="col-md-6">
 					<h2 class="centertext whitetext" ">Payement en ligne</h2>
 				</div>
+
 		</div>
 	</div>
-
 
 <!-- FOURTH PART -->
-<div class="container-fluid green">
-	<h1 class="centertext spacing whitetext" > Notre solution </h1>
-	<h2 class="centertext whitetext " > ____________</h2>
-	<div class="container bluelongframe spacing"> 
-		<img class="img-responsive icons4" style="float: left; padding-right: 20px;" src="img/network.png"> 
-		<h1 class="whitetext">Simplifier vos réservations </h1>
-		<p class="whitetext">Vous ne réussissez pas a trouver de solution pour gérer vos réservations précisément et comme vous le désirez !
-		Vous avez finalement trouvé LUBot, le chatbot interactif, polyvalent et adaptatif.</p>
-	</div>
-	<div class="container bluelongframe spacing"> 
-		<img class="img-responsive icons4" style="float: right; padding-left: 20px;" src="img/calendar.png"> 
-		<h1 class="whitetext">Gérer votre emploi du temps </h1>
-		<p class="whitetext">Trouver un créneau qui convient, envoyer des invitations, gérer les changements et imprévus... Des tâches à faible valeur ajoutée qui peuvent s'avérer très chronophage. Avec sa compréhension du langage naturel LUBot est l'assistant virtuelle qui optimise votre agenda. Récupérez ce temps perdu avec l'intelligence artificielle.</p>
-	</div>
-	<div class="container bluelongframe spacing"> 
-		<img class="img-responsive icons4" style="float: left; padding-right: 20px;" src="img/communication.png"> 
-		<h1 class="whitetext">Digitaliser votre relation client</h1>
-		<p class="whitetext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-	</div>
+	
+	<div  class="container-fluid green">
+		<h1 class="centertext spacing whitetext" > Notre solution </h1>
+		<h2 class="centertext whitetext " > ____________</h2>
+		<div class="container bluelongframe spacing"> 
+			<img class="img-responsive icons4" style="float: left; padding-right: 20px;" src="img/network.png"> 
+			<h1 class="whitetext">Simplifier vos réservations </h1>
+			<p class="whitetext">Vous ne réussissez pas a trouver de solution pour gérer vos réservations précisément et comme vous le désirez !
+			Vous avez finalement trouvé LUBot, le chatbot interactif, polyvalent et adaptatif.</p>
+		</div>
+		<div class="container bluelongframe spacing"> 
+			<img class="img-responsive icons4" style="float: right; padding-left: 20px;" src="img/calendar.png"> 
+			<h1 class="whitetext">Gérer votre emploi du temps </h1>
+			<p class="whitetext">Trouver un créneau qui convient, envoyer des invitations, gérer les changements et imprévus... Des tâches à faible valeur ajoutée qui peuvent s'avérer très chronophage. Avec sa compréhension du langage naturel LUBot est l'assistant virtuelle qui optimise votre agenda. Récupérez ce temps perdu avec l'intelligence artificielle.</p>
+		</div>
+		<div class="container bluelongframe spacing"> 
+			<img class="img-responsive icons4" style="float: left; padding-right: 20px;" src="img/communication.png"> 
+			<h1 class="whitetext">Digitaliser votre relation client</h1>
+			<p class="whitetext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+		</div>
 
-</div>
+	</div>
 
 <!-- FIFTH PART-->
-
-<div class="container-fluid yellow">
-	<div class="container spacing">
-		<div class="col-md-5 bluelongframe">
-			<img class="img-responsive icons4" src="img/entreprise.png"> 
-			<h1 class="whitetext centertext">LUBot Entreprise</h1>
-			<p class="whitetext centertext">Fidélisez, améliorez votre service et ne perdez plus jamais le contact avec vos clients. Accessible 24h 7j/7 LUBot renforce votre relation avec les consommateurs.</p>
-		</div>
-		<div class="col-md-2"></div>
-		<div class="col-md-5 bluelongframe">
-			<img class="img-responsive icons4" src="img/programming.png"> 
-			<h1 class="whitetext centertext">LUBot Développeurs</h1>
-			<p class="whitetext centertext">Intégrez dans vos application l'intelligence artificielle enrichis directement de vos données et expériences clients avec notre API et nos kits d'outils d'interface utilisateur.</p>
+	<div class="container-fluid yellow">
+		<div class="container spacing">
+			<div class="col-md-5 bluelongframe">
+				<img class="img-responsive icons4" src="img/entreprise.png"> 
+				<h1 class="whitetext centertext">LUBot Entreprise</h1>
+				<p class="whitetext centertext">Fidélisez, améliorez votre service et ne perdez plus jamais le contact avec vos clients. Accessible 24h 7j/7 LUBot renforce votre relation avec les consommateurs.</p>
+			</div>
+			<div class="col-md-2"></div>
+			<div class="col-md-5 bluelongframe">
+				<img class="img-responsive icons4" src="img/programming.png"> 
+				<h1 class="whitetext centertext">LUBot Développeurs</h1>
+				<p class="whitetext centertext">Intégrez dans vos application l'intelligence artificielle enrichis directement de vos données et expériences clients avec notre API et nos kits d'outils d'interface utilisateur.</p>
+			</div>
 		</div>
 	</div>
 
 <!-- WEIRD STUFF TO ADD HERE --> 
-</div>
-
-
 
 <!-- SIXTH PART --> 
-<div class="container-fluid blue">
-		<h1 class="centertext spacing whitetext" > Et si on se rencontrait pour de vrai ? </h1>
-		<h2 class="centertext whitetext" > ____________</h2>
-		<img id="LogoRt" class="img-responsive" src="img/Vousdoutez.png"> 
-</div>
-
+	<div class="container-fluid blue">
+			<h1 class="centertext spacing whitetext" > Et si on se rencontrait pour de vrai ? </h1>
+			<h2 class="centertext whitetext" > ____________</h2>
+			<img id="LogoRt" class="img-responsive" src="img/Vousdoutez.png"> 
+	</div>
 
 <!--FOOTER --> 
-<footer class="site-footer">
-	<div class="container">
-		<div class="row">
-		</div>
-		<div class="bottom-footer">
-			<div class="col-md-5"> Copyright LUBot 2018.</div>
-			<div class="col-md-2"><a href="#">Mentions légales</a></div>
-			<div class="col-md-5">
-				<ul class="footer-nav">
-					<li><a href="https://www.facebook.com/LUBotOfficial/">Facebook</a></li>
-					<li><a href="https://twitter.com/LubotOfficial">Twitter</a></li>
-					<li><a href="#">LinkedIN</a></li>
-				</ul>
+	<footer class="site-footer">
+		<div class="container">
+			<div class="row">
+			</div>
+			<div class="bottom-footer">
+				<div class="col-md-5"> Copyright LUBot 2018.</div>
+				<div class="col-md-2"><a href="#">Mentions légales</a></div>
+				<div class="col-md-5">
+					<ul class="footer-nav">
+						<li><a href="https://www.facebook.com/LUBotOfficial/">Facebook</a></li>
+						<li><a href="https://twitter.com/LubotOfficial">Twitter</a></li>
+						<li><a href="#">LinkedIN</a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
-	</div>
-</footer>
-					
+	</footer>					
 
-
-<script src="js/jquery.js"></script> 
-<script src="js/bootstrap.min.js"></script>
-
+<!-- JS IMPORT--> 
+	<script src="js/jquery.js"></script> 
+	<script src="js/jquery.min.js"></script> 
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/main.js"></script>
+	<script src="js/jquery.localScroll.js" type="text/javascript"></script> 
+	<script src="js/jquery.scrollTo.js" type="text/javascript"></script> 
 
 </body>
 </html>
