--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 		<div class="collapse navbar-collapse navbar-right" id="bs-WDM-navbar-collapse-1">
 			<ul class="nav navbar-nav">
-				<li><a href="index.html">Accueil</a></li>
+				<li><a href="#accueil">Accueil</a></li>
 				<li><a href="#solutions">Nos solutions</a></li>
 				 <li class="dropdown">
 			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Développeurs<span class="caret"></span></a>
@@ -34,7 +34,7 @@
 				            <li><a href="#">Documentation</a></li>
 				          </ul>
 		        </li>
-				<li><a href="index.html">Tester</a></li>
+				<li><a href="#tester">Tester</a></li>
 				<li><a href="index.html">À propos</a></li>
 			</ul>
 		</div>
@@ -42,7 +42,7 @@
 	</nav>
 
 <!-- HEADER -->
-	<div class="jumbotron centertext no-margin ">
+	<div id="accueil" class="jumbotron centertext no-margin ">
 		<div class="container">
 			<div class="page-header whitetext">
 				<h1>LUBot</h1>
@@ -163,6 +163,8 @@
 	</div>
 
 <!-- FIFTH PART-->
+
+ 	<div id="tester" class="yellow" style="padding-top: 20px"></div>
 	<div class="container-fluid yellow">
 		<div class="container spacing">
 			<div class="col-md-5 bluelongframe">
