--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
 
 <!-- FIRST PART -->
 	<div class="container-fluid yellow">
-		<div class="spacing">
-		<div class="col-md-4">
+		<div class="spacing" style="padding-bottom: 200px;">
+		<div class="col-md-4 zoomIn zoomInHover">
 			<img class="img-responsive icons1 container" src="img/group.png">
 			<h2 class="centertext">3</h2>
 			<h3 class="centertext">Milliards d'utilisateurs</h3>
 		</div>
-		<div class="col-md-4">
+		<div class="col-md-4 zoomIn zoomInHover">
 			<img class="img-responsive icons1 container" src="img/mail.png">
 			<h2 class="centertext">10</h2>
 			<h3 class="centertext">Milliards de messages par jour</h3>
 		</div>
-		<div class="col-md-4">
+		<div class="col-md-4 zoomIn zoomInHover">
 			<img class="img-responsive icons1 container" src="img/website.png">
 			<h2 class="centertext">23</h2>
-			<h3 class="centertext">Consultations par jour</h3>
+			<h3 class="centertext ">Consultations par jour</h3>
 		</div>
 		</div>
 	</div>
@@ -78,25 +78,25 @@
 			<h1 class="centertext spacing whitetext" > Pourquoi choisir LUBot ? </h1>
 			<h2 class="centertext whitetext" > ____________</h2>
 
-		<div class="col-md-4">
-			<img class="img-responsive icons2 container" src="img/FirstPhone.png">
-			<h2 class="centertext whitetext" >Personnaliser</h2>
-			<h3 class="centertext whitetext" >____________</h3>
-			<p class="blueframe centertext spacing whitetext" style="line-height:2;">À l'aide des derniers algorithmes en matière de compréhension du  langage naturel, LUBot garantit une expérience client fluide et intuitive </p>
+		<div class="  col-md-4">
+			<img class="phones img-responsive icons2 container" src="img/FirstPhone.png">
+			<h2 class="centertext whitetext zoomIn" >Personnaliser</h2>
+			<h3 class="centertext whitetext zoomIn" >____________</h3>
+			<p class="blueframe centertext spacing whitetext zoomIn" style="line-height:2;">À l'aide des derniers algorithmes en matière de compréhension du  langage naturel, LUBot garantit une expérience client fluide et intuitive </p>
+		</div>
+
+		<div class=" col-md-4">
+			<img class="phones img-responsive icons2 container" src="img/SecondPhone.png">
+			<h2 class="centertext whitetext zoomIn" >Transformer</h2>
+			<h3 class="centertext whitetext zoomIn" >____________</h3>			
+			<p class="blueframe centertext spacing whitetext zoomIn" style="line-height:2;"> Parce que aujourd'hui l'usage des applications de messageries instantanés à largement dépassé celle des réseaux sociaux, LUBot optimise votre communication.</p>
 		</div>
 
 		<div class="col-md-4">
-			<img class="img-responsive icons2 container" src="img/SecondPhone.png">
-			<h2 class="centertext whitetext" >Transformer</h2>
-			<h3 class="centertext whitetext" >____________</h3>			
-			<p class="blueframe centertext spacing whitetext" style="line-height:2;"> Parce que aujourd'hui l'usage des applications de messageries instantanés à largement dépassé celle des réseaux sociaux, LUBot optimise votre communication.</p>
-		</div>
-
-		<div class="col-md-4">
-			<img class="img-responsive icons2 container" src="img/ThirdPhone.png">
-			<h2 class="centertext whitetext" ">Pérenniser</h2>
-			<h3 class="centertext whitetext" " >____________</h3>
-			<p class="blueframe centertext spacing whitetext" style="line-height:2;"> Avec des algorithmes de machine learning automatisé, votre LUBot ne cesse d'apprendre et d'être toujours plus intelligent afin de mieux vous servir.</p>
+			<img class=" phones img-responsive icons2 container" src="img/ThirdPhone.png">
+			<h2 class="centertext whitetext zoomIn" ">Pérenniser</h2>
+			<h3 class="centertext whitetext zoomIn" " >____________</h3>
+			<p class="blueframe centertext spacing whitetext zoomIn" style="line-height:2;"> Avec des algorithmes de machine learning automatisé, votre LUBot ne cesse d'apprendre et d'être toujours plus intelligent afin de mieux vous servir.</p>
 		</div>
 	</div>
 
