Animation triggered by scrolling

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<style> @import url('https://fonts.googleapis.com/css?family=Roboto'); </style>
+		<script src="js/scrollmagic/minified/ScrollMagic.min.js"></script>
+		<script src="js/scrollmagic/uncompressed/ScrollMagic.js"></script>
 	</head>
 	<body style="font-family: 'Roboto', sans-serif;">
 
@@ -48,24 +50,24 @@
 				<h1>LUBot</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 			</div>
-	    	<button type="button" class="btn btn-outline-primary btn-lg">DEMO</button>
+	    	<button type="button" class="btn btn-outline-primary btn-lg hvr-sweep-to-right">DEMO</button>
 		</div>
 	</div>
 
 <!-- FIRST PART -->
-	<div class="container-fluid yellow">
+	<div class="container-fluid yellow firstpart">
 		<div class="spacing" style="padding-bottom: 200px;">
-		<div class="col-md-4 zoomIn zoomInHover">
+		<div class="col-md-4  zoomInHover totrigger1">
 			<img class="img-responsive icons1 container" src="img/group.png">
 			<h2 class="centertext">3</h2>
 			<h3 class="centertext">Milliards d'utilisateurs</h3>
 		</div>
-		<div class="col-md-4 zoomIn zoomInHover">
+		<div class="col-md-4  zoomInHover totrigger1">
 			<img class="img-responsive icons1 container" src="img/mail.png">
 			<h2 class="centertext">10</h2>
 			<h3 class="centertext">Milliards de messages par jour</h3>
 		</div>
-		<div class="col-md-4 zoomIn zoomInHover">
+		<div class="col-md-4  zoomInHover totrigger1">
 			<img class="img-responsive icons1 container" src="img/website.png">
 			<h2 class="centertext">23</h2>
 			<h3 class="centertext ">Consultations par jour</h3>
@@ -216,6 +218,7 @@
 	<script src="js/main.js"></script>
 	<script src="js/jquery.localScroll.js" type="text/javascript"></script> 
 	<script src="js/jquery.scrollTo.js" type="text/javascript"></script> 
+	
 
 </body>
 </html>
