more animations trigerred

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>LUBot</title>
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="css/animations.css">
 		<style> @import url('https://fonts.googleapis.com/css?family=Roboto'); </style>
 		<script src="js/scrollmagic/minified/ScrollMagic.min.js"></script>
 		<script src="js/scrollmagic/uncompressed/ScrollMagic.js"></script>
@@ -76,55 +77,55 @@
 	</div>
 
 <!-- SECOND PART -->
-	<div class="container-fluid green">
+	<div class="container-fluid green secondpart">
 			<h1 class="centertext spacing whitetext" > Pourquoi choisir LUBot ? </h1>
 			<h2 class="centertext whitetext" > ____________</h2>
 
 		<div class="  col-md-4">
 			<img class="phones img-responsive icons2 container" src="img/FirstPhone.png">
-			<h2 class="centertext whitetext zoomIn" >Personnaliser</h2>
-			<h3 class="centertext whitetext zoomIn" >____________</h3>
-			<p class="blueframe centertext spacing whitetext zoomIn" style="line-height:2;">À l'aide des derniers algorithmes en matière de compréhension du  langage naturel, LUBot garantit une expérience client fluide et intuitive </p>
+			<h2 class="centertext whitetext totrigger2" >Personnaliser</h2>
+			<h3 class="centertext whitetext totrigger2" >____________</h3>
+			<p class="blueframe centertext spacing whitetext totrigger2" style="line-height:2;">À l'aide des derniers algorithmes en matière de compréhension du  langage naturel, LUBot garantit une expérience client fluide et intuitive </p>
 		</div>
 
 		<div class=" col-md-4">
 			<img class="phones img-responsive icons2 container" src="img/SecondPhone.png">
-			<h2 class="centertext whitetext zoomIn" >Transformer</h2>
-			<h3 class="centertext whitetext zoomIn" >____________</h3>			
-			<p class="blueframe centertext spacing whitetext zoomIn" style="line-height:2;"> Parce que aujourd'hui l'usage des applications de messageries instantanés à largement dépassé celle des réseaux sociaux, LUBot optimise votre communication.</p>
+			<h2 class="centertext whitetext totrigger2" >Transformer</h2>
+			<h3 class="centertext whitetext totrigger2" >____________</h3>			
+			<p class="blueframe centertext spacing whitetext totrigger2" style="line-height:2;"> Parce que aujourd'hui l'usage des applications de messageries instantanés à largement dépassé celle des réseaux sociaux, LUBot optimise votre communication.</p>
 		</div>
 
 		<div class="col-md-4">
 			<img class=" phones img-responsive icons2 container" src="img/ThirdPhone.png">
-			<h2 class="centertext whitetext zoomIn" ">Pérenniser</h2>
-			<h3 class="centertext whitetext zoomIn" " >____________</h3>
-			<p class="blueframe centertext spacing whitetext zoomIn" style="line-height:2;"> Avec des algorithmes de machine learning automatisé, votre LUBot ne cesse d'apprendre et d'être toujours plus intelligent afin de mieux vous servir.</p>
+			<h2 class="centertext whitetext totrigger2" ">Pérenniser</h2>
+			<h3 class="centertext whitetext totrigger2" " >____________</h3>
+			<p class="blueframe centertext spacing whitetext totrigger2" style="line-height:2;"> Avec des algorithmes de machine learning automatisé, votre LUBot ne cesse d'apprendre et d'être toujours plus intelligent afin de mieux vous servir.</p>
 		</div>
 	</div>
 
 <!-- THIRD PART --> 
  	<div id="solutions" class="blue" style="padding-top: 20px"></div>
-	<div class="container-fluid blue">
+	<div class="container-fluid blue thirdpart">
 		<h1 class="centertext spacing whitetext" > Pourquoi choisir LUBot ? </h1>
 		<h2 class="centertext whitetext" > ____________</h2>
 		<img id="LogoRt" class="img-responsive" src="img/Perdez.png"> 
 
-		<div class="col-md-4">
-			<h2 class="centertext whitetext" >Polyvalent</h2>
-			<h3 class="centertext whitetext" >____________</h3>
-			<p class="yellowframe centertext spacing bluetext" style="line-height:2;">Opinions, suggestions, requêtes, LUBot s'adapte précisément à vos besoins et à ceux de vos clients pour garantir une expérience optimale.</p>
+		<div class="col-md-4 zoomInHover">
+			<h2 class="centertext whitetext totrigger3" >Polyvalent</h2>
+			<h3 class="centertext whitetext totrigger3" >____________</h3>
+			<p class="yellowframe centertext spacing bluetext totrigger3 " style="line-height:2;">Opinions, suggestions, requêtes, LUBot s'adapte précisément à vos besoins et à ceux de vos clients pour garantir une expérience optimale.</p>
 		</div>
 
-		<div class="col-md-4">
-			<h2 class="centertext whitetext" >Sécurisé</h2>
-			<h3 class="centertext whitetext" >____________</h3>			
-			<p class="yellowframe centertext spacing bluetext" style="line-height:2;">En plus des protocoles de communication hautement sécurisés,LUBot est conforme au RGPD. L'architecture du système offre une confidentialité et une transparence permanente.</p>
+		<div class="col-md-4 zoomInHover">
+			<h2 class="centertext whitetext totrigger3" >Sécurisé</h2>
+			<h3 class="centertext whitetext totrigger3" >____________</h3>			
+			<p class="yellowframe centertext spacing bluetext totrigger3" style="line-height:2;">En plus des protocoles de communication hautement sécurisés,LUBot est conforme au RGPD. L'architecture du système offre une confidentialité et une transparence permanente.</p>
 		</div>
 
-		<div class="col-md-4">
-			<h2 class="centertext whitetext" ">Multi-Support</h2>
-			<h3 class="centertext whitetext" " >____________</h3>
-			<p class="yellowframe centertext spacing bluetext" style="line-height:2;"> Messenger, Slack, Wordpress et autre CRM LUBot et son API vous accompagnent partout. Nous vous offrons la possibilité d'affirmer votre personnalités en réalisant vos intégrations</p>
+		<div class="col-md-4 zoomInHover">
+			<h2 class="centertext whitetext totrigger3" ">Multi-Support</h2>
+			<h3 class="centertext whitetext totrigger3" " >____________</h3>
+			<p class="yellowframe centertext spacing bluetext totrigger3" style="line-height:2;"> Messenger, Slack, Wordpress et autre CRM LUBot et son API vous accompagnent partout. Nous vous offrons la possibilité d'affirmer votre personnalités en réalisant vos intégrations</p>
 		</div>
 		<div style="padding-bottom: 100px">
 			<h1 class="centertext spacing whitetext" > Prochainement </h1>
