more animations trigerred 2

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 	</div>
 
 <!-- FIRST PART -->
-	<div class="container-fluid yellow firstpart">
+<div class="firstpart">
+	<div class="container-fluid yellow">
 		<div class="spacing" style="padding-bottom: 200px;">
 		<div class="col-md-4  zoomInHover totrigger1">
 			<img class="img-responsive icons1 container" src="img/group.png">
@@ -75,6 +76,7 @@
 		</div>
 		</div>
 	</div>
+</div>
 
 <!-- SECOND PART -->
 	<div class="container-fluid green secondpart">
