more and more animations

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		</div>
 		</div>
 	</div>
-</div>
+</div>	
 
 <!-- SECOND PART -->
 	<div class="container-fluid green secondpart">
@@ -145,21 +145,21 @@
 
 <!-- FOURTH PART -->
 	
-	<div  class="container-fluid green">
+	<div  class="container-fluid green fourthpart">
 		<h1 class="centertext spacing whitetext" > Notre solution </h1>
 		<h2 class="centertext whitetext " > ____________</h2>
-		<div class="container bluelongframe spacing"> 
+		<div class="container bluelongframe spacing totrigger4"> 
 			<img class="img-responsive icons4" style="float: left; padding-right: 20px;" src="img/network.png"> 
 			<h1 class="whitetext">Simplifier vos réservations </h1>
 			<p class="whitetext">Vous ne réussissez pas a trouver de solution pour gérer vos réservations précisément et comme vous le désirez !
 			Vous avez finalement trouvé LUBot, le chatbot interactif, polyvalent et adaptatif.</p>
 		</div>
-		<div class="container bluelongframe spacing"> 
+		<div class="container bluelongframe spacing totrigger5"> 
 			<img class="img-responsive icons4" style="float: right; padding-left: 20px;" src="img/calendar.png"> 
 			<h1 class="whitetext">Gérer votre emploi du temps </h1>
 			<p class="whitetext">Trouver un créneau qui convient, envoyer des invitations, gérer les changements et imprévus... Des tâches à faible valeur ajoutée qui peuvent s'avérer très chronophage. Avec sa compréhension du langage naturel LUBot est l'assistant virtuelle qui optimise votre agenda. Récupérez ce temps perdu avec l'intelligence artificielle.</p>
 		</div>
-		<div class="container bluelongframe spacing"> 
+		<div class="container bluelongframe spacing totrigger4"> 
 			<img class="img-responsive icons4" style="float: left; padding-right: 20px;" src="img/communication.png"> 
 			<h1 class="whitetext">Digitaliser votre relation client</h1>
 			<p class="whitetext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
@@ -170,15 +170,15 @@
 <!-- FIFTH PART-->
 
  	<div id="tester" class="yellow" style="padding-top: 20px"></div>
-	<div class="container-fluid yellow">
+	<div class="container-fluid yellow fifthpart">
 		<div class="container spacing">
-			<div class="col-md-5 bluelongframe">
+			<div class="col-md-5 bluelongframe totrigger6">
 				<img class="img-responsive icons4" src="img/entreprise.png"> 
 				<h1 class="whitetext centertext">LUBot Entreprise</h1>
 				<p class="whitetext centertext">Fidélisez, améliorez votre service et ne perdez plus jamais le contact avec vos clients. Accessible 24h 7j/7 LUBot renforce votre relation avec les consommateurs.</p>
 			</div>
 			<div class="col-md-2"></div>
-			<div class="col-md-5 bluelongframe">
+			<div class="col-md-5 bluelongframe totrigger7">
 				<img class="img-responsive icons4" src="img/programming.png"> 
 				<h1 class="whitetext centertext">LUBot Développeurs</h1>
 				<p class="whitetext centertext">Intégrez dans vos application l'intelligence artificielle enrichis directement de vos données et expériences clients avec notre API et nos kits d'outils d'interface utilisateur.</p>
