--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 
 		<div class="collapse navbar-collapse navbar-right" id="bs-WDM-navbar-collapse-1">
 			<ul class="nav navbar-nav">
-				<li><a href="#accueil">Accueil</a></li>
-				<li><a href="#solutions">Nos solutions</a></li>
+				<li><a id="menu" href="#accueil">Accueil</a></li>
+				<li><a id="menu" href="#solutions">Nos solutions</a></li>
 				 <li class="dropdown">
 			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Développeurs<span class="caret"></span></a>
 				          <ul class="dropdown-menu">
-				            <li><a href="#">API</a></li>
-				            <li><a href="#">Documentation</a></li>
+				            <li><a id="menu" href="#">API</a></li>
+				            <li><a id="menu" href="#">Documentation</a></li>
 				          </ul>
 		        </li>
-				<li><a href="#tester">Tester</a></li>
-				<li><a href="index.html">À propos</a></li>
+				<li><a id="menu" href="#tester">Tester</a></li>
+				<li><a id="menu" href="index.html">À propos</a></li>
 			</ul>
 		</div>
 	</div>
@@ -172,13 +172,13 @@
  	<div id="tester" class="yellow" style="padding-top: 20px"></div>
 	<div class="container-fluid yellow fifthpart">
 		<div class="container spacing">
-			<div class="col-md-5 bluelongframe totrigger6">
+			<div class="col-md-5 bluelongframe totrigger6 zoomInHover">
 				<img class="img-responsive icons4" src="img/entreprise.png"> 
 				<h1 class="whitetext centertext">LUBot Entreprise</h1>
 				<p class="whitetext centertext">Fidélisez, améliorez votre service et ne perdez plus jamais le contact avec vos clients. Accessible 24h 7j/7 LUBot renforce votre relation avec les consommateurs.</p>
 			</div>
 			<div class="col-md-2"></div>
-			<div class="col-md-5 bluelongframe totrigger7">
+			<div class="col-md-5 bluelongframe totrigger7 zoomInHover">
 				<img class="img-responsive icons4" src="img/programming.png"> 
 				<h1 class="whitetext centertext">LUBot Développeurs</h1>
 				<p class="whitetext centertext">Intégrez dans vos application l'intelligence artificielle enrichis directement de vos données et expériences clients avec notre API et nos kits d'outils d'interface utilisateur.</p>
