--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
 <div class="firstpart">
 	<div class="container-fluid yellow">
 		<div class="spacing" style="padding-bottom: 200px;">
-		<div class="col-md-4  zoomInHover totrigger1">
+		<div id="totrigger1" class="col-md-4  zoomInHover totrigger1">
 			<img class="img-responsive icons1 container" src="img/group.png">
 			<h2 class="centertext">3</h2>
 			<h3 class="centertext">Milliards d'utilisateurs</h3>
 		</div>
-		<div class="col-md-4  zoomInHover totrigger1">
+		<div id="totrigger1" class="col-md-4  zoomInHover totrigger1">
 			<img class="img-responsive icons1 container" src="img/mail.png">
 			<h2 class="centertext">10</h2>
 			<h3 class="centertext">Milliards de messages par jour</h3>
 		</div>
-		<div class="col-md-4  zoomInHover totrigger1">
+		<div id="totrigger1" class="col-md-4  zoomInHover totrigger1">
 			<img class="img-responsive icons1 container" src="img/website.png">
 			<h2 class="centertext">23</h2>
 			<h3 class="centertext ">Consultations par jour</h3>
@@ -83,26 +83,27 @@
 			<h1 class="centertext spacing whitetext" > Pourquoi choisir LUBot ? </h1>
 			<h2 class="centertext whitetext" > ____________</h2>
 
-		<div class="  col-md-4">
-			<img class="phones img-responsive icons2 container" src="img/FirstPhone.png">
+
+			<img class="phones img-responsive icons2 container" src="img/SecondPhone.png">
+<div>
+		<div class="col-md-4">
 			<h2 class="centertext whitetext totrigger2" >Personnaliser</h2>
 			<h3 class="centertext whitetext totrigger2" >____________</h3>
-			<p class="blueframe centertext spacing whitetext totrigger2" style="line-height:2;">À l'aide des derniers algorithmes en matière de compréhension du  langage naturel, LUBot garantit une expérience client fluide et intuitive </p>
+			<p class="blueframe centertext spacing whitetext totrigger2" style="line-height:2;">À l'aide des derniers algorithmes en matière de compréhension du  langage naturel, LUBot garantit une expérience client fluide et intuitive</br></br> </p>
 		</div>
 
 		<div class=" col-md-4">
-			<img class="phones img-responsive icons2 container" src="img/SecondPhone.png">
 			<h2 class="centertext whitetext totrigger2" >Transformer</h2>
 			<h3 class="centertext whitetext totrigger2" >____________</h3>			
 			<p class="blueframe centertext spacing whitetext totrigger2" style="line-height:2;"> Parce que aujourd'hui l'usage des applications de messageries instantanés à largement dépassé celle des réseaux sociaux, LUBot optimise votre communication.</p>
 		</div>
 
 		<div class="col-md-4">
-			<img class=" phones img-responsive icons2 container" src="img/ThirdPhone.png">
 			<h2 class="centertext whitetext totrigger2" ">Pérenniser</h2>
 			<h3 class="centertext whitetext totrigger2" " >____________</h3>
-			<p class="blueframe centertext spacing whitetext totrigger2" style="line-height:2;"> Avec des algorithmes de machine learning automatisé, votre LUBot ne cesse d'apprendre et d'être toujours plus intelligent afin de mieux vous servir.</p>
+			<p class="blueframe centertext spacing whitetext totrigger2" style="line-height:2;"> Avec des algorithmes de machine learning automatisé, votre LUBot ne cesse d'apprendre et d'être toujours plus intelligent afin de mieux vous servir.</br></br></p>
 		</div>
+</div>
 	</div>
 
 <!-- THIRD PART --> 
@@ -115,7 +116,7 @@
 		<div class="col-md-4 zoomInHover">
 			<h2 class="centertext whitetext totrigger3" >Polyvalent</h2>
 			<h3 class="centertext whitetext totrigger3" >____________</h3>
-			<p class="yellowframe centertext spacing bluetext totrigger3 " style="line-height:2;">Opinions, suggestions, requêtes, LUBot s'adapte précisément à vos besoins et à ceux de vos clients pour garantir une expérience optimale.</p>
+			<p class="yellowframe centertext spacing bluetext totrigger3 " style="line-height:2;"></br>Opinions, suggestions, requêtes, LUBot s'adapte précisément à vos besoins et à ceux de vos clients pour garantir une expérience optimale.</br></br></p>
 		</div>
 
 		<div class="col-md-4 zoomInHover">
@@ -127,7 +128,7 @@
 		<div class="col-md-4 zoomInHover">
 			<h2 class="centertext whitetext totrigger3" ">Multi-Support</h2>
 			<h3 class="centertext whitetext totrigger3" " >____________</h3>
-			<p class="yellowframe centertext spacing bluetext totrigger3" style="line-height:2;"> Messenger, Slack, Wordpress et autre CRM LUBot et son API vous accompagnent partout. Nous vous offrons la possibilité d'affirmer votre personnalités en réalisant vos intégrations</p>
+			<p class="yellowframe centertext spacing bluetext totrigger3" style="line-height:2;"> Messenger, Slack, Wordpress et autre CRM LUBot et son API vous accompagnent partout. Nous vous offrons la possibilité d'affirmer votre personnalités en réalisant vos intégrations</br></p>
 		</div>
 		<div style="padding-bottom: 100px">
 			<h1 class="centertext spacing whitetext" > Prochainement </h1>
