--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-			<a class="navbar-brand logo" href="#"><img class="logo" src="img/Logo_Complet_2.png"></a>
+			
 		</div>
 
-		<div class="collapse navbar-collapse navbar-right" id="bs-WDM-navbar-collapse-1">
+		<div class="collapse navbar-collapse" id="bs-WDM-navbar-collapse-1">
 			<ul class="nav navbar-nav">
+				<img class="logo" src="img/Logo_Réduit.png">
 				<li><a id="menu" href="#accueil">Accueil</a></li>
 				<li><a id="menu" href="#solutions">Nos solutions</a></li>
 				 <li class="dropdown">
