remove the images for responsive, text inside

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 			<h2 class="centertext whitetext" > ____________</h2>
 
 
+
 			<img class="phones img-responsive icons2 container" src="img/SecondPhone.png">
 <div>
 		<div class="col-md-4">
@@ -112,7 +113,11 @@
 	<div class="container-fluid blue thirdpart">
 		<h1 class="centertext spacing whitetext" > Pourquoi choisir LUBot ? </h1>
 		<h2 class="centertext whitetext" > ____________</h2>
-		<img id="LogoRt" class="img-responsive" src="img/Perdez.png"> 
+			<div class="container centertext">
+				<img class="logo" src="img/Logo_Réduit.png">
+				<h7 style="color: white;">Ne perdez plus jamais votre	temps avec la résérvation</h7>
+			</div>
+		
 
 		<div class="col-md-4 zoomInHover">
 			<h2 class="centertext whitetext totrigger3" >Polyvalent</h2>
@@ -194,7 +199,12 @@
 	<div class="container-fluid blue">
 			<h1 class="centertext spacing whitetext" > Et si on se rencontrait pour de vrai ? </h1>
 			<h2 class="centertext whitetext" > ____________</h2>
-			<img id="LogoRt" class="img-responsive" src="img/Vousdoutez.png"> 
+			<div class="container centertext">
+				<img class="logo9"  src="img/Logo_Réduit.png">
+				<h7 style="color: white;">Vous doutez encore que l'intelligence artificielle peut simplifier votre vie ? 
+					Vous pouvez programmer un rendez-vous avec nous à tout moment ! </h7>
+			</div>
+			
 	</div>
 
 <!--FOOTER --> 
